--- a/ImageFeed/Base.lproj/Main.storyboard
+++ b/ImageFeed/Base.lproj/Main.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="ZNc-xQ-21O">
-    <device id="retina6_0" orientation="portrait" appearance="light"/>
+    <device id="retina5_9" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21678"/>
@@ -15,22 +15,22 @@
             <objects>
                 <viewController title="ImageList" id="BYZ-38-t0r" customClass="ImagesListViewController" customModule="ImageFeed" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="dH8-Ek-GCM">
-                                <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="none" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="ImagesListCell" rowHeight="124" id="0q4-VD-My0" customClass="ImagesListCell" customModule="ImageFeed" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="50" width="390" height="124"/>
+                                        <rect key="frame" x="0.0" y="50" width="375" height="124"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="0q4-VD-My0" id="hut-I1-3cP">
-                                            <rect key="frame" x="0.0" y="0.0" width="390" height="124"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="124"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="0" translatesAutoresizingMaskIntoConstraints="NO" id="JMq-0p-pR9">
-                                                    <rect key="frame" x="16" y="4" width="358" height="116"/>
+                                                    <rect key="frame" x="16" y="4" width="343" height="116"/>
                                                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <userDefinedRuntimeAttributes>
                                                         <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
@@ -46,7 +46,7 @@
                                                     <color key="highlightedColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 </label>
                                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YFu-85-OK5" userLabel="Cell Button">
-                                                    <rect key="frame" x="332" y="4" width="42" height="42"/>
+                                                    <rect key="frame" x="317" y="4" width="42" height="42"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" constant="42" id="1B4-fe-ulG"/>
                                                         <constraint firstAttribute="height" constant="42" id="MyI-4z-DAb"/>
@@ -89,15 +89,61 @@
                             <constraint firstAttribute="trailing" secondItem="dH8-Ek-GCM" secondAttribute="trailing" id="SJ0-na-m6p"/>
                         </constraints>
                     </view>
+                    <tabBarItem key="tabBarItem" title="" image="tab_editorial_active" id="Ww2-TG-Iav"/>
                     <navigationItem key="navigationItem" id="DnB-5g-DVp"/>
                     <connections>
                         <outlet property="tableView" destination="dH8-Ek-GCM" id="tV3-h0-y8A"/>
-                        <segue destination="HfV-gs-vGG" kind="show" identifier="ShowSingleImage" id="HJT-X5-L3u"/>
+                        <segue destination="ypY-BZ-PGi" kind="presentation" identifier="ShowSingleImage" id="aBN-Sb-0p2"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-386.15384615384613" y="-295.02369668246445"/>
+            <point key="canvasLocation" x="-1729" y="-171"/>
+        </scene>
+        <!--Single Image View Controller-->
+        <scene sceneID="8bR-wC-Baw">
+            <objects>
+                <viewController id="ypY-BZ-PGi" customClass="SingleImageViewController" customModule="ImageFeed" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="dBr-m9-hfi">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="802"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="0" translatesAutoresizingMaskIntoConstraints="NO" id="doD-qj-VVL">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="802"/>
+                                <color key="backgroundColor" name="YP Background"/>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="iMC-mG-Fru">
+                                <rect key="frame" x="8" y="8" width="44" height="44"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="44" id="Uac-cl-lxH"/>
+                                    <constraint firstAttribute="height" constant="44" id="Xl2-rM-MDd"/>
+                                </constraints>
+                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                <state key="normal" image="Backward"/>
+                                <connections>
+                                    <action selector="didTapBackButton:" destination="ypY-BZ-PGi" eventType="touchUpInside" id="SUK-gp-zng"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="HAi-zG-tdE"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="iMC-mG-Fru" firstAttribute="top" secondItem="doD-qj-VVL" secondAttribute="top" constant="8" id="54a-do-vgt"/>
+                            <constraint firstItem="doD-qj-VVL" firstAttribute="trailing" secondItem="HAi-zG-tdE" secondAttribute="trailing" id="JKm-aV-dwP"/>
+                            <constraint firstItem="doD-qj-VVL" firstAttribute="leading" secondItem="HAi-zG-tdE" secondAttribute="leading" id="MUN-Z3-1Tp"/>
+                            <constraint firstItem="doD-qj-VVL" firstAttribute="top" secondItem="dBr-m9-hfi" secondAttribute="top" id="YyB-Im-8Th"/>
+                            <constraint firstItem="iMC-mG-Fru" firstAttribute="leading" secondItem="doD-qj-VVL" secondAttribute="leading" constant="8" id="v48-Ns-IYw"/>
+                            <constraint firstAttribute="bottom" secondItem="doD-qj-VVL" secondAttribute="bottom" id="vt5-H7-hCS"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="imageView" destination="doD-qj-VVL" id="hbt-Nm-iJ3"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Ndd-hr-Zfa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-815.20000000000005" y="-171.42857142857144"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="wDF-93-xzP">
@@ -114,8 +160,8 @@
                         </tabBarAppearance>
                     </tabBar>
                     <connections>
-                        <segue destination="iIb-rA-Qys" kind="relationship" relationship="viewControllers" id="Wdq-z4-WLi"/>
                         <segue destination="Kbg-qI-7zl" kind="relationship" relationship="viewControllers" id="KDh-wi-2yl"/>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="viewControllers" id="6pb-0g-Jkd"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="aub-aL-r22" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -127,11 +173,11 @@
             <objects>
                 <viewController id="Kbg-qI-7zl" customClass="ProfileViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="jsw-fv-W7h">
-                        <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="zpc-bQ-wYc">
-                                <rect key="frame" x="15.999999999999986" y="122.99999999999999" width="233.66666666666663" height="145.66666666666663"/>
+                                <rect key="frame" x="15.999999999999986" y="125.99999999999999" width="233.66666666666663" height="145.66666666666663"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Photo" translatesAutoresizingMaskIntoConstraints="NO" id="Aay-Bb-GxJ" userLabel="Avatar Image View">
                                         <rect key="frame" x="0.0" y="0.0" width="70" height="70"/>
@@ -172,7 +218,7 @@
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </stackView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hKg-3j-xdo" userLabel="Logout Button">
-                                <rect key="frame" x="322" y="136" width="44" height="44"/>
+                                <rect key="frame" x="307" y="139" width="44" height="44"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="44" id="YnQ-9j-iHV"/>
@@ -197,73 +243,20 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="AUx-c5-QWR" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1315" y="540"/>
-        </scene>
-        <!--Single Image View Controller-->
-        <scene sceneID="16b-la-oB7">
-            <objects>
-                <viewController id="HfV-gs-vGG" customClass="SingleImageViewController" customModule="ImageFeed" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="oLh-qS-NQf">
-                        <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" insetsLayoutMarginsFromSafeArea="NO" image="0" translatesAutoresizingMaskIntoConstraints="NO" id="uOA-Px-6gx">
-                                <rect key="frame" x="0.0" y="91" width="390" height="670"/>
-                            </imageView>
-                        </subviews>
-                        <viewLayoutGuide key="safeArea" id="EDA-jD-F3H"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                        <constraints>
-                            <constraint firstItem="uOA-Px-6gx" firstAttribute="trailing" secondItem="EDA-jD-F3H" secondAttribute="trailing" id="CeQ-pi-PEW"/>
-                            <constraint firstItem="uOA-Px-6gx" firstAttribute="leading" secondItem="EDA-jD-F3H" secondAttribute="leading" id="Uac-8Q-Hec"/>
-                            <constraint firstItem="uOA-Px-6gx" firstAttribute="bottom" secondItem="EDA-jD-F3H" secondAttribute="bottom" id="hEd-Ay-gyv"/>
-                            <constraint firstItem="uOA-Px-6gx" firstAttribute="top" secondItem="EDA-jD-F3H" secondAttribute="top" id="lr1-b4-63Q"/>
-                        </constraints>
-                    </view>
-                    <navigationItem key="navigationItem" id="pgR-QH-2Aq"/>
-                    <connections>
-                        <outlet property="imageView" destination="uOA-Px-6gx" id="j0I-cM-5y8"/>
-                    </connections>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="9Am-GU-8kE" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="560" y="-295"/>
-        </scene>
-        <!--Navigation Controller-->
-        <scene sceneID="cCe-VO-eaU">
-            <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="iIb-rA-Qys" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="" image="tab_editorial_active" id="1Dg-ba-Zuv"/>
-                    <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="VXX-WZ-oNC">
-                        <rect key="frame" x="0.0" y="47" width="390" height="44"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                        <color key="tintColor" name="YP White"/>
-                        <color key="barTintColor" name="YP White"/>
-                        <navigationBarAppearance key="standardAppearance">
-                            <color key="backgroundColor" name="YP Black"/>
-                        </navigationBarAppearance>
-                    </navigationBar>
-                    <nil name="viewControllers"/>
-                    <toolbar key="toolbar" opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="EUy-Wy-AiG">
-                        <autoresizingMask key="autoresizingMask"/>
-                    </toolbar>
-                    <connections>
-                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="Ke4-ng-kLo"/>
-                    </connections>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="zQg-EU-GzK" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="-1315.3846153846152" y="-295.02369668246445"/>
+            <point key="canvasLocation" x="-1728" y="614"/>
         </scene>
     </scenes>
     <resources>
         <image name="0" width="200" height="132"/>
+        <image name="Backward" width="24" height="24"/>
         <image name="No Active" width="30" height="27.333333969116211"/>
         <image name="Photo" width="70" height="70"/>
         <image name="ipad.and.arrow.forward" width="20" height="22"/>
         <image name="tab_editorial_active" width="20" height="22"/>
         <image name="tab_profile_active" width="24" height="24"/>
+        <namedColor name="YP Background">
+            <color red="0.10199999809265137" green="0.10599999874830246" blue="0.13300000131130219" alpha="0.49599999189376831" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
         <namedColor name="YP Black">
             <color red="0.10199999809265137" green="0.10599999874830246" blue="0.13300000131130219" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
