--- a/ImageFeed/Base.lproj/Main.storyboard
+++ b/ImageFeed/Base.lproj/Main.storyboard
@@ -202,7 +202,7 @@
         <!--Profile View Controller-->
         <scene sceneID="V0Z-S2-UPY">
             <objects>
-                <viewController id="Kbg-qI-7zl" customClass="ProfileViewController" sceneMemberID="viewController">
+                <viewController id="Kbg-qI-7zl" customClass="ProfileViewController" customModule="ImageFeed" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="jsw-fv-W7h">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
