--- a/ImageFeed/Base.lproj/Main.storyboard
+++ b/ImageFeed/Base.lproj/Main.storyboard
@@ -119,6 +119,8 @@
                                 <constraints>
                                     <constraint firstAttribute="trailing" secondItem="jLs-0I-mlK" secondAttribute="trailing" id="4LV-6y-l45"/>
                                     <constraint firstItem="jLs-0I-mlK" firstAttribute="top" secondItem="lPN-0Z-1b6" secondAttribute="top" id="GLp-B2-gOk"/>
+                                    <constraint firstItem="jLs-0I-mlK" firstAttribute="height" secondItem="sc9-W8-hO6" secondAttribute="height" multiplier="0.504695" id="NTf-VY-ySC"/>
+                                    <constraint firstItem="jLs-0I-mlK" firstAttribute="width" secondItem="sc9-W8-hO6" secondAttribute="width" multiplier="1.09415" id="b5J-kw-hAx"/>
                                     <constraint firstItem="jLs-0I-mlK" firstAttribute="leading" secondItem="lPN-0Z-1b6" secondAttribute="leading" id="pYk-9F-rNJ"/>
                                     <constraint firstAttribute="bottom" secondItem="jLs-0I-mlK" secondAttribute="bottom" id="wzq-6S-gnw"/>
                                 </constraints>
